apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: apps
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
